--- a/calculadora/diseno.css
+++ b/calculadora/diseno.css
@@ -1,10 +1,30 @@
+
+/*Cambio de tamaño a los container*/
+.bg-image{
+  height: 700px;
+  border-radius: none;
+  position:relative;
+  
+}
+
+
+.calculadora {
+  padding: 20px;
+  margin-left: 35%;
+  height: 520px;
+  width: 413px;
+  background-color: #594fb6;
+  border-radius: 10%;
+  border: 2px solid #000000;
+}
+
 .boton{
+    padding: 20px;
+    margin: 10px;
     text-decoration: none;
-    padding:15px;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 20px;
     color: #ffffff;
-    align-items: center;
     justify-content: center;
     background-color: #1883ba;
     border-radius: 6px;
@@ -13,7 +33,7 @@
 
 .exp{
     text-decoration: none;
-    padding: 15px;
+    padding: 20px;
     font-weight: 600;
     font-size: 20px;
     color: #000000;
@@ -22,17 +42,4 @@
     background-color: #ffffff;
     border-radius: 6px;
     border: 6px solid #000000;
-  }
-
-  .calculadora{
-    text-decoration: none;
-
-    font-weight: 600;
-    font-size: 20px;
-    color: #ffffff;
-    align-items: center;
-    justify-content: center;
-    background-color: #c3f1e8;
-    border-radius: 6px;
-    border: 4px solid #000000;
   }
