--- a/dados/ventana.css
+++ b/dados/ventana.css
@@ -1,32 +1,4 @@
 
-        .blog {
-        height: 200%;
-        width: 100%;
-        border: 2px solid black;
-        background-color:  #1d75bc;
-    }
-    .foto {
-          margin: 10px; 
-          border: 3px solid rgb(251, 250, 253);  
-    }
-    .foto:hover~#img1,.foto:hover~#img2,.foto:hover~#img3,.foto:hover~#img4,.foto:hover~#img5{
-            visibility: hidden;
-    }
-    #texto{
-        display: inline-block;
-        vertical-align: top;
-        font-size: 1.5rem;
-        font-weight: bold  ;
-        color: rgb(255, 255, 255);
-        font-family: Helvetica, Arial, sans-serif;
-    }
-
-
-    .div1{
-       padding-left: 30%;
-        border-collapse: collapse;     
-    }
-
     #img1{
         border: 4px solid black;
         width: 500px; 
@@ -34,34 +6,18 @@
     table, td, th {
         border: 3px solid rgb(255, 255, 255);
       }
-    table {
-        height: 150px;
-        width: 580px;
-        border-collapse: collapse;
+    .btn{
+        margin-left: 55%;
+        }
+    .row{
+        margin-left: 30%;
     }
-    scroll-container {
-        display: block;
-        width: 600px;
-        height: 100px;
-        align-items: center;
-        justify-content: center;
-        overflow-y: scroll;
-        scroll-behavior: smooth;
-        border: 4px solid rgb(255, 255, 255);
+    .dado{
+        padding-left: 10%;
     }
- 
-    .boton_personalizado{
-        text-decoration: none;
-        padding: 10px;
-        font-weight: 600;
-        font-size: 20px;
-        color: #ffffff;
-        align-items: center;
-        justify-content: center;
-        background-color: #1883ba;
-        border-radius: 6px;
-        border: 2px solid #ffffff;
-      }
+    #dado3{
+        padding-left: 25%;
+    }
 
    
          
